# cli

./: Cargo.toml  Dockerfile  Dockerfile.dind  README.md  entrypoint.sh  release.sh
.github/workflows/: build-and-release.yml  ci.yml
cli/: Cargo.toml
cli/src/: config.rs  main.rs
cli/src/client/: mod.rs  models.rs
cli/src/client/norbert_v1/: state.rs
cli/src/commands/: mod.rs
cli/src/commands/agent/: code.rs  get_next_input.rs  get_or_create_session.rs  mod.rs  run_actions.rs  run_agent.rs
cli/src/commands/agent/code/: checkpoint.rs  interactive.rs  mod.rs  non_interactive.rs  stream.rs  tooling.rs
cli/src/commands/agent/run/: checkpoint.rs  helpers.rs  mod.rs  mode_async.rs  mode_interactive.rs  mode_non_interactive.rs  stream.rs  tui.rs
cli/src/commands/flow/: clone.rs  get_flow_ref.rs  push.rs  sync.rs
cli/src/utils/: check_update.rs  local_context.rs  mod.rs  network.rs  system_context.rs
libs/api/: Cargo.toml
libs/api/src/: lib.rs  models.rs
libs/api/src/kevin_v1/: state.rs
libs/api/src/stuart_v1/: state.rs
libs/mcp/client/: Cargo.toml
libs/mcp/client/src/: lib.rs  local.rs
libs/mcp/server/: Cargo.toml  README_SECRETS.md
libs/mcp/server/src/: combined_tools.rs  lib.rs  local_tools.rs  remote_tools.rs  secret_manager.rs  tool_descriptions.rs  tools.rs
libs/shared/: Cargo.toml
libs/shared/src/: lib.rs  local_store.rs
libs/shared/src/models/: mod.rs
libs/shared/src/models/integrations/: openai.rs
libs/shared/src/secrets/: additional_rules.toml  gitleaks.rs  gitleaks.toml  mod.rs
mcp/client/: Cargo.toml
mcp/client/src/: lib.rs  local.rs
mcp/server/: Cargo.toml
mcp/server/src/: lib.rs  tools.rs
shared/: Cargo.toml
shared/src/: lib.rs
shared/src/models/: llm.rs
shared/src/models/integrations/: openai.rs
src/: config.rs  main.rs
src/client/: mod.rs  models.rs
src/client/dave_v1/: state.rs
src/client/kevin_v1/: state.rs
src/client/norbert_v1/: state.rs
src/commands/: agent.rs  mod.rs
src/commands/agent/: get_next_input.rs  get_or_create_session.rs  mod.rs  run_actions.rs  run_agent.rs
src/commands/flow/: mod.rs  push.rs  sync.rs
src/utils/: check_update.rs  mod.rs  output.rs  socket.rs
tui/: Cargo.toml
tui/src/: app.rs  event.rs  lib.rs  terminal.rs  view.rs
tui/src/services/: bash_block.rs  confirmation_dialog.rs  helper_block.rs  helper_dropdown.rs  hint_helper.rs  markdown.rs  message.rs  message_pattern.rs  mod.rs  sessions_dialog.rs  shell_mode.rs  update.rs
