[workspace]
resolver = "2"
members = ["cli", "tui"]
default-members = ["cli"]


[workspace.package]
version = "0.1.50"
edition = "2024"


[workspace.dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.10.0", features = ["serde", "v4"] }


