[workspace]
resolver = "2"
members = ["cli", "tui", "mcp/client", "mcp/server"]
default-members = ["cli"]


[workspace.package]
version = "0.1.52"
edition = "2024"


[workspace.dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = [
    "client",
    "server",
    "transport-io",
    "transport-child-process",
], branch = "main" }
futures = "0.3.31"
regex = "1.11.1"
