[workspace]
resolver = "2"
members = [
    "cli",
    "tui",
    "libs/shared",
    "libs/api",
    "libs/mcp/client",
    "libs/mcp/server",
]
default-members = ["cli"]


[workspace.package]
version = "0.1.78"
edition = "2024"


[workspace.dependencies]
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
anyhow = "1.0.98"
rmcp = { git = "https://github.com/stakpak/rust-sdk", features = [
    "client",
    "server",
    "reqwest",
    "transport-io",
    "transport-child-process",
    "transport-streamable-http-client",
    "transport-streamable-http-server",
    "transport-streamable-http-server-session",
    "transport-worker",
], branch = "schema" }
futures = "0.3.31"
futures-util = "0.3.31"
regex = "1.11.1"
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = { version = "=0.12.15", features = ["json", "stream"] }


# Required nightly
[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
