[package]
name = "stakpak-tui"
version = { workspace = true }
edition = "2024"

[dependencies]
stakpak-shared = { path = "../shared" }
regex = { workspace = true }
serde_json = { workspace = true }
ratatui = "0.26"
crossterm = "0.27"
tokio = { version = "1.39", features = ["full"] }
unicode-width = "0.2.0"

