[package]
name = "stakpak-tui"
version = { workspace = true }
edition = "2024"

[dependencies]
stakpak-shared = { path = "../libs/shared" }
regex = { workspace = true }
serde_json = { workspace = true }
ratatui = "0.29"
crossterm = "0.29"
tokio = { version = "1.39", features = ["full"] }
unicode-width = "0.2.0"
uuid = { workspace = true }
tui-markdown = "0.3.5"
chrono = "0.4"
pulldown-cmark = "0.9"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"