[package]
name = "stakpak-mcp-server"
version = { workspace = true }
edition = "2024"

[dependencies]
stakpak-shared = { path = "../../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk", features = [
    "server",
    "transport-io",
], branch = "main" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }

