[package]
name = "stakpak-mcp-server"
version = { workspace = true }
edition = "2024"

[dependencies]
stakpak-api = { path = "../../api" }
stakpak-shared = { path = "../../shared" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rmcp = { workspace = true }
uuid = { workspace = true }
rand = { workspace = true }
axum = "0.8.4"

[lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
